@@ -16,8 +16,6 @@
 #include <libHX.h>
 #include "internal.h"
 
-/* Definitions */
-#define MAX_KEY_SIZE 256
 /* To make it easier on the highlighter */
 #define C_OPEN  '('
 #define C_CLOSE ')'
@@ -75,8 +73,7 @@ EXPORT_SYMBOL int HXformat_add(struct HXformat_map *ftable, const char *key,
 	struct fmt_entry *entry;
 	int ret;
 
-	if (strpbrk(key, "\t\n\v ") != NULL || strlen(key) > MAX_KEY_SIZE ||
-	    *key == '\0') {
+	if (strpbrk(key, "\t\n\v ") != NULL || *key == '\0') {
 		fprintf(stderr, "%s: Bogus key \"%s\"\n", __func__, key);
 		return -EINVAL;
 	}
