@@ -2,6 +2,8 @@
 
 HEAD
 ====
+Enhancements:
+- format: remove 256-char format key length limit
 
 
 v3.15 (2013-03-07)
